# Drug-Resistance-Mutation-Predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: 01_resistance_exploration.ipynb
outputs/: cv_auc_scores.csv  isolate_snp_profiles.fasta  model_metrics.csv  top_snps_ampicillin.csv  top_snps_ciprofloxacin.csv  top_snps_isoniazid.csv  top_snps_methicillin.csv  top_snps_rifampicin.csv
outputs/models/: resistance_predictor.joblib
src/: main.py
src/data/: simulator.py
src/models/: predictor.py
src/utils/: config.py
src/visualization/: plots.py
tests/: test_predictor_plots.py  test_simulator.py
