[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "day23-drug-resistance-predictor"
version = "1.0.0"
description = "SNP-based antibiotic resistance prediction: L1-LR, RF, GBM for 5 drugs across 3 pathogens"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24","pandas>=2.0","scipy>=1.11",
    "scikit-learn>=1.3","matplotlib>=3.7",
    "seaborn>=0.13","joblib>=1.3","pyyaml>=6.0","biopython>=1.81",
]
[project.optional-dependencies]
dev = ["pytest>=7.4","black","ruff"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
